Fixed overflow/scrolling behavor on content, content sidebar, and main sidebar

--- a/queertk/static/sass/components/_navigation.sass
+++ b/queertk/static/sass/components/_navigation.sass
@@ -4,13 +4,17 @@
 
 .navigation
     display: flex
+    flex: 3
     flex-direction: column
     align-items: center
     background: $bg-dark-blur
     backdrop-filter: blur(15px)
     width: 20rem
-    max-height: calc(100vh - 110px)
+    //max-height: calc(100vh - 110px)
+    overflow: hidden
 
     a
-        margin-top: 1em
+        margin: auto 0
+        height: 2.5rem
         font-size: clamp(1.1em, 2.1vw, 1.3em)
+        align-content: center
