--- a/queertk/static/sass/style.sass
+++ b/queertk/static/sass/style.sass
@@ -70,7 +70,7 @@ header
 //     margin: auto
 
 .flex-container
-    height: calc(100vh - 110px)
+    height: calc(100vh - 106px)
     margin: auto
     flex: 1 100%
 
